--- a/_includes/components/social-list-item.html
+++ b/_includes/components/social-list-item.html
@@ -22,6 +22,14 @@
       {% assign name = "GitHub" %}
       {% assign icon = "icon-github" %}
       {% assign prep = "https://github.com/" %}
+    {% elsif platform == "instagram" %}
+      {% assign name = "Instagram" %}
+      {% assign icon = "icon-instagram" %}
+      {% assign prep = "https://instagram.com/" %} 
+    {% elsif platform == "linkedin" %}
+      {% assign name = "Linkedin" %}
+      {% assign icon = "icon-linkedin2" %}
+      {% assign prep = "https://linkedin.com/in/" %}   
     {% endif %}
   {% endunless %}
 
