--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -25,7 +25,8 @@
 <link rel="dns-prefetch" href="{{ '/assets/bower_components/katex/dist/katex.min.css'                        | relative_url }}" id="_hrefKatexCSS">
 <link rel="dns-prefetch" href="{{ '/assets/bower_components/katex/dist/contrib/copy-tex.min.js'              | relative_url }}" id="_hrefKatexCopyJS">
 <link rel="dns-prefetch" href="{{ '/assets/bower_components/katex/dist/contrib/copy-tex.min.css'             | relative_url }}" id="_hrefKatexCopyCSS">
-<link rel="dns-prefetch" href="{{ '/assets/img/swipe.svg'                                                    | relative_url }}" id="_hrefSwipeSVG">
+<link rel="dns-prefetch" href="{{ '/assets/img/swipe.gif'                                                    | relative_url }}" id="_hrefSwipeSVG">
+
 
 {% assign disqus = site.disqus | default:site.disqus_shortname %}
 {% if disqus %}
