--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,9 +19,11 @@ layout: base
 
 {% include components/post.html post=page no_link_title=true no_excerpt=true hide_image=page.hide_image %}
 
-<hr class="dingbat related" />
+<!-- <hr class="dingbat related" /> -->
 
-{% assign addons = page.addons | default:site.hydejack.post_addons %}
+
+<!-- 관련된 게시물도 함께 보여줄 것인지 여부 -->
+<!-- {% assign addons = page.addons | default:site.hydejack.post_addons %}
 {% unless addons %}{% assign addons = "about,newsletter,related,random" | split:"," %}{% endunless %}
 {% for addon in addons %}
   {% case addon %}
@@ -31,4 +33,4 @@ layout: base
     {% include components/related-posts.html post=post %}
   {% else %}
   {% endcase %}
-{% endfor %}
+{% endfor %} -->
