--- a/_includes/head/seo-tag.html
+++ b/_includes/head/seo-tag.html
@@ -1,4 +1,5 @@
 {% comment %}<!--
 Including `seo` in a partial prevents a parse error when `jekyll-seo-tag` is not included
+ <meta name="google-site-verification" content="x48flJxpyNFftZqItjejVpNkCuLdSEV4ILTpMgtvftU" />
 -->{% endcomment %}
 {% seo %}
