--- a/_includes/head/seo-fallback.html
+++ b/_includes/head/seo-fallback.html
@@ -10,4 +10,5 @@
 {% endcapture %}
 <title>{{ title | strip }}</title>
 <meta name="description" content="{{ page.description | default:page.excerpt | default:site.description | markdownify | strip_html }}">
+<meta name="google-site-verification" content="x48flJxpyNFftZqItjejVpNkCuLdSEV4ILTpMgtvftU" />
 <link rel="canonical" href="{{ page.url | absolute_url }}">
