--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,11 @@
+<body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ "/assets/js/vendor/jquery-3.1.1.min.js" | prepend: site.baseurl | prepend: site.url }}"><\/script>')</script>
-<script src="{{ "/assets/js/vendor/bootstrap.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
-<script src="{{ "/assets/js/jquery.terminal-0.8.8.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
-<script src="{{ "/assets/js/jquery.mousewheel.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
-<script src="{{ "/assets/js/rivescript.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
-<script src="{{ "/assets/js/main.js" | prepend: site.baseurl | prepend: site.url }}"></script>
+<script src="/assets/js/vendor/bootstrap.min.js"></script>
+<script src="/assets/js/jquery.terminal-0.8.8.min.js"></script>
+<script src="/assets/js/jquery.mousewheel.min.js"></script>
+<script src="/assets/js/rivescript.min.js"></script>
+<script src="/assets/js/main.js"></script>
 <script>
   (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
   function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -13,3 +14,4 @@
   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
   ga('create','{{ site.google_analytics_code }}','auto');ga('send','pageview');
 </script>
+</body>
