--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
-    <link rel="stylesheet" href="{{ "/assets/scss/main.scss" | prepend: site.baseurl | prepend: site.url }}">
-    <script src="{{ "/assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
+    <link rel="stylesheet" href="/assets/scss/main.scss">
+    <script src="/assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
   </head>
