--- a/_layouts/chitchat.html
+++ b/_layouts/chitchat.html
@@ -9,13 +9,15 @@ published: true
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 {% include header.html %}
-<body>
-  <div class="container site-wrapper">
-		<div class="row inner-wrapper">
-		  <div class="terminal"></div>
-		</div>
-  </div>
 
-	{% include footer.html %}
+<body>
+	<img src="/assets/img/jibo_header2.png" alt="Italian Trulli">
+	<div class="container site-wrapper">
+			<div class="row inner-wrapper">
+			<div class="terminal"></div>
+			</div>
+	</div>
+
+		{% include footer.html %}
 </body>
 </html>
