--- a/assets/scss/_jquery.terminal.scss
+++ b/assets/scss/_jquery.terminal.scss
@@ -45,7 +45,7 @@
   }
   50% {
         background-color: #bbb; /* not #aaa because it's seem there is Google Chrome bug */
-        color: #000;
+        color: #aaa;
   }
 }
 @-webkit-keyframes blink {
@@ -55,7 +55,7 @@
   }
   50% {
         background-color: #bbb;
-        color: #000;
+        color: #aaa;
   }
 }
 @-ms-keyframes blink {
@@ -65,7 +65,7 @@
   }
   50% {
         background-color: #bbb;
-        color: #000;
+        color: #aaa;
   }
 }
 @-moz-keyframes blink {
@@ -106,13 +106,13 @@
 }
 .terminal .inverted, .cmd .inverted, .cmd .cursor.blink {
     background-color: #aaa;
-    color: #000;
+    color: rgb(255, 255, 255);
 }
 .terminal .terminal-output div div::-moz-selection,
 .terminal .terminal-output div span::-moz-selection,
 .terminal .terminal-output div div a::-moz-selection {
     background-color: #aaa;
-    color: #000;
+    color: rgb(255, 255, 255);
 }
 .terminal .terminal-output div div::selection,
 .terminal .terminal-output div div a::selection,
@@ -120,7 +120,7 @@
 .cmd > span::selection,
 .cmd .prompt span::selection {
     background-color: #aaa;
-    color: #000;
+    color: rgb(255, 255, 255);
 }
 .terminal .terminal-output div.error, .terminal .terminal-output div.error div {
     color: red;
