--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background: #100520;
+  background: #0e0025;
   color: #777;
   font-family: Montserrat, Arial, sans-serif;
 }
@@ -35,7 +35,7 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   text-shadow: 0 1px 1px 1px #666;
-  box-shadow: 0px 1px 15px 1px rgba(69, 65, 78, 0.08);
+  box-shadow: 0px 1px 15px 1px rgba(157, 255, 0, 0.08);
   position: relative;
   border-radius: 5px;
 }
@@ -66,5 +66,5 @@ body {
 }
 
 .sparkboxes .box4 {
-  background-image: linear-gradient( 135deg, #EE9AE5 10%, #5961F9 100%);
+  background-image: linear-gradient( 135deg, #EE9AE5 10%, #bdbdbd 100%);
 }
